--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,11 +1,13 @@
-FROM node:latest
+FROM node:18-alpine
 
 WORKDIR /app
 
-COPY . app/
+COPY package*.json ./
 
-RUN npm install
+RUN npm ci
 
-EXPOSE 3000
+COPY . .
 
-CMD npm run dev
+EXPOSE 5173
+
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
