--- a/Product/Dockerfile
+++ b/Product/Dockerfile
@@ -1,3 +1,12 @@
+FROM node:22-alpine3.22 AS dev
+WORKDIR /app
+ENV NODE_ENV=development
+COPY package.json package-lock.json ./
+RUN npm ci
+COPY . .
+EXPOSE 9000 
+CMD ["npm", "run", "dev"]
+
 FROM node:22-alpine3.22 AS builder
 WORKDIR /app
 COPY package.json package-lock.json ./
@@ -5,11 +14,13 @@ RUN npm ci --only=production
 COPY . .
 RUN ["npm", "run", "build"]
 
-FROM gcr.io/distroless/nodejs22-debian12
+FROM gcr.io/distroless/nodejs22-debian12 AS prod
 WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 EXPOSE 9000
 USER node # already exist in this distroless base image
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD [ "node", "-e", "require('http').get('http://localhost:9000/health', (res) => res.statusCode === 200 ? process.exit(0) : process.exit(1))" ]
 ENTRYPOINT ["node", "dist/index.js"] # distroless provides the Node runtime binary
