--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,3 +1,12 @@
+FROM node:22-alpine3.22 AS dev
+WORKDIR /app
+ENV NODE_ENV=development
+COPY package*.json ./
+RUN npm ci
+COPY . .
+EXPOSE 5173 
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+
 FROM node:22-alpine3.22 AS builder
 WORKDIR /app
 COPY package.json package-lock.json ./
