--- a/k8s-common/secret-provider-class.yaml
+++ b/k8s-common/secret-provider-class.yaml
@@ -2,6 +2,7 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-kv-secrets
+  namespace: prod
 spec:
   provider: azure
   parameters:
