--- a/k8s-common/service-account.yaml
+++ b/k8s-common/service-account.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: app-sa
-  namespace: app
+  name: prod-sa
+  namespace: prod
   annotations:
     azure.workload.identity/client-id: "${azurerm_user_assigned_identity.app_identity.client_id}"
     # will reference it directly during deployment. 
