1- Enhanced the files architecture of infrastructure into small pieces and updated output file to be like a control plane for the whole app, all for troubleshooting. 2- finished kuberentes manifests of front-end service

--- a/k8s-policies/allow-frontend-to-backends.yaml
+++ b/k8s-policies/allow-frontend-to-backends.yaml
@@ -7,6 +7,7 @@ spec:
   podSelector:
     matchLabels:
       app: frontend
+      # becuase network policy is namespace scoped kubectl api-resources will show it
       namespace: prod
   policyTypes:
     - Egress
