--- a/User/kubernetes/service.yaml
+++ b/User/kubernetes/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: user-service
-  namespace: prod
+  namespace: prod # the namespace of the service
   labels:
     app: user
     app.kubernetes.io/component: user_profile
