Added Azure workload identity annotations, refactored environment variable handling to use Kubernetes secrets and secret provider class for csi store. Introduced new Helm chart files for backend service, including service account and horizontal pod autoscaler configurations.

--- a/Cart/kubernetes/deployment.yaml
+++ b/Cart/kubernetes/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       labels:
         app: cart
         app.kubernetes.io/component: cart
+        azure.workload.identity/use: "true"
     spec:
       # run the container as a non-root user to prevent privilege escalation
       securityContext:
@@ -33,17 +34,24 @@ spec:
           image: REPLACE_WITH_ACR/cart:REPLACE_WITH_TAG
 
           env:
-            - name: REDIS_CONNECTION_STRING_PATH
-              value: "/mnt/secrets-store/redis-conn-string" # Pass the file path as an env var
-            - name: COSMOS_CONNECTION_STRING_PATH
-              value: "/mnt/secrets-store/cosmos-conn-string" # Pass the file path as an env var
+            - name: REDIS_CONNECTION_STRING
+              valueFrom:
+                secretKeyRef:
+                  name: app-connection-secrets # The name of the resulting Kubernetes Secret
+                  key: REDIS_CONNECTION_STRING # The key in the Kubernetes Secret
+            - name: COSMOS_CONNECTION_STRING
+              valueFrom:
+                secretKeyRef:
+                  name: app-connection-secrets # The name of the resulting Kubernetes Secret
+                  key: COSMOS_CONNECTION_STRING # The key in the Kubernetes Secret
           volumeMounts: # volume inside the pod
             - name: secrets-volume
+            # secrets will appear here as files
               mountPath: "/mnt/secrets-store"
               readOnly: true
 
           ports:
-            - containerPort: 9001
+            - containerPort: 9003
 
           resources:
             requests:
@@ -57,12 +65,12 @@ spec:
           startupProbe:
             httpGet:
               path: /healthz
-              port: 9001
+              port: 9003
 
           readinessProbe: # know when a container is ready to start accepting traffic
             httpGet:
               path: /healthz
-              port: 9001
+              port: 9003
             initialDelaySeconds: 5
             periodSeconds: 10
             timeoutSeconds: 2
@@ -71,7 +79,7 @@ spec:
           livenessProbe: # indicate unrecoverable application failure, for example a deadlock.
             httpGet:
               path: /healthz
-              port: 9001
+              port: 9003
             initialDelaySeconds: 5
             periodSeconds: 10
             failureThreshold: 3 # This ensures the pods is observed as a not ready for a period of time before it's hard killed
@@ -79,7 +87,7 @@ spec:
       volumes:
         - name: secrets-volume
           csi:
-            driver: secrets-store.csi.x-k8s.io
+            driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
               secretProviderClass: "azure-kv-secrets" # Reference the SecretProviderClass
