--- a/k8s-common/secret-provider-class.yaml
+++ b/k8s-common/secret-provider-class.yaml
@@ -1,4 +1,4 @@
-apiVersion: secrets-store.csi.x-k8s.io/v1
+apiVersion: secrets-store.csi.k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-kv-secrets
@@ -23,3 +23,13 @@ spec:
         - |
           objectName: cosmos-conn-string
           objectType: secret
+    
+  secretObjects:
+  - secretName: app-connection-secrets # The name of the resulting Kubernetes Secret
+    type: Opaque
+    data:
+      # Key in the K8s Secret: Value in the Key Vault
+      - key: REDIS_CONNECTION_STRING
+        objectName: redis-conn-string
+      - key: COSMOS_CONNECTION_STRING
+        objectName: cosmos-conn-string
