--- a/k8s-common/gateway.yaml
+++ b/k8s-common/gateway.yaml
@@ -8,6 +8,7 @@ metadata:
     # You must replace <YOUR_ALB_SUBNET_ID> in CI/CD.
     alb.networking.azure.io/application-gateway-subnet-id: <YOUR_ALB_SUBNET_ID>
 spec:
+  # The gatewayClassName determines which controller will handle traffic for the gateway, naming is a must
   gatewayClassName: azure-application-gateway-for-containers
   listeners:
   - name: http-listener
