--- a/backend-service/values-product.yaml
+++ b/backend-service/values-product.yaml
@@ -20,9 +20,9 @@ service:
 serviceAccount:
   create: true
   name: product-sa
-  # Automatically mount a ServiceAccount's API credentials?
+  # Automatically mount a ServiceAccount's API credentials
   automount: true
-  clientId: "CHANGE_IN_CI_CD"
+  clientId: ""
 
 securityContext:
   capabilities:
@@ -35,37 +35,24 @@ securityContext:
 
 resources:
   requests:
-    cpu: 300m
-    memory: 512Mi
+    memory: "512Mi"
+    cpu: "300m"
   limits:
-    cpu: 450m
-    memory: 900Mi
+    memory: "900Mi"
+    cpu: "450m"
 
-# CSI Driver Config
-volumes:
-  - name: secrets-volume
-    csi:
-      driver: secrets-store.csi.k8s.io
-      readOnly: true
-      volumeAttributes:
-        secretProviderClass: "azure-kv-secrets"
+secretProvider:
+  keyvaultName: azure-kv-secrets
+  tenantID: ""
+  secretName: app-connection-secrets # The name of the resulting Kubernetes Secret
+  secrets:
+    - remoteName: redis-conn-string
+      envKey: REDIS_CONNECTION_STRING
+    - remoteName: cosmos-conn-string
+      envKey: COSMOS_CONNECTION_STRING
 
-# Volume inside the pod
-volumeMounts:
-  - name: secrets-volume
-    mountPath: "/mnt/secrets-store"
-    readOnly: true
-
-env:
-  - name: NODE_ENV
-    value: "production"
-  - name: REDIS_CONNECTION_STRING
-    valueFrom:
-      secretKeyRef:
-        name: app-connection-secrets # The name of the resulting Kubernetes Secret
-        key: REDIS_CONNECTION_STRING # The key in the Kubernetes Secret
-  - name: COSMOS_CONNECTION_STRING
-    valueFrom:
-      secretKeyRef:
-        name: app-connection-secrets # The name of the resulting Kubernetes Secret
-        key: COSMOS_CONNECTION_STRING # The key in the Kubernetes Secret
+probes:
+  initialDelaySeconds: 5
+  periodSeconds: 10
+  timeoutSeconds: 2
+  failureThreshold: 3 
