--- a/backend-service/values-user.yaml
+++ b/backend-service/values-user.yaml
@@ -20,9 +20,9 @@ autoscaling:
 serviceAccount:
   create: true
   name: user-sa
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  clientId: "CHANGE_IN_CI_CD"
+  # Automatically mount a ServiceAccount's API credentials, meaning the pod will run kubectl commands on the cluster which is a security risk
+  automount: false
+  clientId: ""
 
 securityContext:
   capabilities:
@@ -33,31 +33,27 @@ securityContext:
   runAsNonRoot: true
   runAsUser: 1000
 
-env:
-  - name: NODE_ENV
-    value: "production"
-  - name: REDIS_CONNECTION_STRING
-    valueFrom:
-      secretKeyRef:
-        name: app-connection-secrets # The name of the resulting Kubernetes Secret
-        key: REDIS_CONNECTION_STRING # The key in the Kubernetes Secret
-  - name: COSMOS_CONNECTION_STRING
-    valueFrom:
-      secretKeyRef:
-        name: app-connection-secrets # The name of the resulting Kubernetes Secret
-        key: COSMOS_CONNECTION_STRING # The key in the Kubernetes Secret
 
-# CSI Driver Config
-volumes:
-  - name: secrets-volume
-    csi:
-      driver: secrets-store.csi.k8s.io
-      readOnly: true
-      volumeAttributes:
-        secretProviderClass: "azure-kv-secrets-user"
+resources:
+  requests:
+    memory: "512Mi"
+    cpu: "300m"
+  limits:
+    memory: "900Mi"
+    cpu: "450m"
 
-# Volume inside the pod
-volumeMounts:
-  - name: secrets-volume
-    mountPath: "/mnt/secrets-store"
-    readOnly: true
+secretProvider:
+  keyvaultName: azure-kv-secrets
+  tenantID: ""
+  secretName: app-connection-secrets # The name of the resulting Kubernetes Secret
+  secrets:
+    - remoteName: redis-conn-string
+      envKey: REDIS_CONNECTION_STRING
+    - remoteName: cosmos-conn-string
+      envKey: COSMOS_CONNECTION_STRING
+
+probes:
+  initialDelaySeconds: 5
+  periodSeconds: 10
+  timeoutSeconds: 2
+  failureThreshold: 3 
