Removed redundant manual k8s manifests (deployment, service, hpa) from Cart, User, and Product directories.
Created shared backend-service Helm chart with values-*.yaml overrides for each microservice.

Configured dynamic Workload Identity injection via Helm templates.

Standardized security contexts and non-root users across all deployments.

--- a/Cart/Dockerfile
+++ b/Cart/Dockerfile
@@ -19,8 +19,8 @@ WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
+USER 65532:65532 # Standard Distroless non-root user
 EXPOSE 9003
-USER node # already exist in this distroless base image
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD [ "node", "-e", "require('http').get('http://localhost:9003/health', (res) => res.statusCode === 200 ? process.exit(0) : process.exit(1))" ]
 ENTRYPOINT ["node", "dist/index.js"] # distroless provides the Node runtime binary
