--- a/backend-service/templates/secretproviderclass.yaml
+++ b/backend-service/templates/secretproviderclass.yaml
@@ -19,6 +19,7 @@ spec:
         - |
           objectName: {{ .remoteName }}
           objectType: {{ .type | default "secret" }}
+          objectAlias: {{ .remoteName }}
         {{- end }}
     
   secretObjects:
