--- a/backend-service/templates/serviceaccount.yaml
+++ b/backend-service/templates/serviceaccount.yaml
@@ -5,9 +5,10 @@ metadata:
   name: {{ include "backend-service.serviceAccountName" . }}
   labels:
     {{- include "backend-service.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
   annotations:
+    azure.workload.identity/client-id: {{ .Values.serviceAccount.clientId | quote }}
+    {{- with .Values.serviceAccount.annotations }}
     {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end }}
