--- a/backend-service/values-cart.yaml
+++ b/backend-service/values-cart.yaml
@@ -30,7 +30,8 @@ securityContext:
   readOnlyRootFilesystem: true
   allowPrivilegeEscalation: false
   runAsNonRoot: true
-  runAsUser: 1000
+  runAsUser: 65532
+  runAsGroup: 65532
 
 resources:
   requests:
@@ -55,3 +56,8 @@ probes:
   periodSeconds: 10
   timeoutSeconds: 2
   failureThreshold: 3 
+
+# Some Fixes
+
+nameOverride: cart
+fullnameOverride: cart
