--- a/backend-service/values-user.yaml
+++ b/backend-service/values-user.yaml
@@ -31,7 +31,8 @@ securityContext:
   readOnlyRootFilesystem: true
   allowPrivilegeEscalation: false
   runAsNonRoot: true
-  runAsUser: 1000
+  runAsUser: 65532
+  runAsGroup: 65532
 
 
 resources:
@@ -57,3 +58,7 @@ probes:
   periodSeconds: 10
   timeoutSeconds: 2
   failureThreshold: 3 
+
+# Some Fixes
+nameOverride: user
+fullnameOverride: user
