--- a/backend-service/templates/secretproviderclass.yaml
+++ b/backend-service/templates/secretproviderclass.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   provider: azure
   parameters:
+  # We are using workload identity to authenticate with Azure AD, so we don't need to use pod identity or VM managed identity
     usePodIdentity: "false"
     useVMManagedIdentity: "false"
     # Always quote IDs to prevent YAML parsing errors
