--- a/backend-service/values-product.yaml
+++ b/backend-service/values-product.yaml
@@ -33,6 +33,7 @@ securityContext:
   runAsNonRoot: true
   runAsUser: 65532
   runAsGroup: 65532
+  fsGroup: 65532 # Change ownership of the volumes and file system to the non-root user
 
 resources:
   requests:
