--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*.env
+
+/terraform/.terraform
+/terraform/.terraform.lock.hcl
+/terraform/.terraform.tfstate
