--- a/.github/workflows/infra-provision.yaml
+++ b/.github/workflows/infra-provision.yaml
@@ -1,3 +1,10 @@
+# The storage account & container part should be done manually before running this workflow.no need for automation. It's a one time setup.
+# first comment the backend block in the provider.tf file, so that terraform doesn't try to use the backend.
+# then run the following command to create the storage account and container:
+# terraform apply -target=azurerm_resource_group.tfstate -target=azurerm_storage_account.tfstate -target=azurerm_storage_container.tfstate
+# un-comment the backend block in the provider.tf file after the storage account and container are created.
+# terraform init and now you'll migrate to the cloud backend.
+
 name: Infrastructure Provisioning
 
 on:
@@ -16,6 +23,7 @@ jobs:
     permissions:
       id-token: write # Required for OIDC
       contents: read # Required to checkout code
+      actions: read # Required to read vars (implicit)
 
     steps:
       - name: Checkout code
@@ -32,56 +40,29 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: Terraform Init
+        env:
+          # These tell the backend (Azure Storage) which identity to use
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          ARM_USE_OIDC: true
+        run: terraform init
 
-      - name: Check and Bootstrap Backend
-        id: bootstrap
-        # This is the OIDC token for the Azure CLI. Terraform's azurerm provider
+      - name: Terraform Plan
         env:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          # This will tell terraform to not search for secrets, instead look for OIDC token in the env.
           ARM_USE_OIDC: true
-        run: |
-          # 1. Check if the storage account already exists using Azure CLI
-          RG_NAME="tfstate"
-          STORAGE_NAME="tfstateprodinfrastructure123"
-          CONTAINER_NAME="prodinfra"
-
-          if az storage account show --name $STORAGE_NAME --resource-group $RG_NAME >/dev/null 2>&1; then
-            echo "✅ Backend storage already exists. Skipping bootstrap."
-            echo "bootstrap_needed=false" >> $GITHUB_OUTPUT
-          else
-            echo "⚠️ Backend storage missing. Starting bootstrap..."
-            echo "bootstrap_needed=true" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Initialize Terraform
-        if: steps.bootstrap.outputs.bootstrap_needed == 'true'
-        run: terraform init -backend=false
-
-      - name: Create Backend Resources
-        if: steps.bootstrap.outputs.bootstrap_needed == 'true'
-        run: |
-          terraform apply \
-            -target=azurerm_resource_group.tfstate \
-            -target=azurerm_storage_account.tfstate \
-            -target=azurerm_storage_container.tfstate \
-            -auto-approve
-
-      - name: Initialize Terraform (Standard Mode)
-        # If we just bootstrapped, this migrates state. If not, it just connects.
-        run: |
-          if [ "${{ steps.bootstrap.outputs.bootstrap_needed }}" == "true" ]; then
-            terraform init -migrate-state -force-copy
-          else
-            terraform init
-          fi
-
-      - name: Terraform Plan
         run: terraform plan -out=tfplan
 
       - name: Terraform Apply
+        env:
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          ARM_USE_OIDC: true
         run: terraform apply -auto-approve tfplan
 
       - name: Save Outputs to GitHub Variables
